fixes squashed banner cards

--- a/front/app/stylesheets/cards.scss
+++ b/front/app/stylesheets/cards.scss
@@ -12,7 +12,7 @@ minds-card-user, .minds-banner-card{
 
     > img{
       min-width:100%;
-      max-height:100%;
+      max-width:100%;
     }
 
     .minds-banner-overlay{
